--- a/hitcount/locale/ru/LC_MESSAGES/django.po
+++ b/hitcount/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-08 12:52+0700\n"
-"PO-Revision-Date: 2013-07-08 13:28+0700\n"
+"PO-Revision-Date: 2013-07-08 13:31+0700\n"
 "Last-Translator: Basil Shubin <basil.shubin@gmail.com>\n"
 "Language-Team:  <RU@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -48,4 +48,4 @@ msgstr "бан"
 
 #: models.py:196
 msgid "Blacklisted User Agents"
-msgstr "черный спикок (UA)"
+msgstr "черный список (UA)"
